--- a/00-Intro-GIT-HTML-CSS/03. HTML/homework/styles.css
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/homework/styles.css
@@ -14,9 +14,5 @@ img{
 #spanId{
     font-size: 18px;
     margin: 50px solid;
-}
-#Divclass{
-    position: absolute;
-    left: 200px;
-
-}
+    display: flex;
+    align-items: center;
